2025-07-03T00:57:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16039059396 # 693
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-03
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 557 950 / 570 963
* notice: next accum: outdated-unq outdated-all / unq all: 558 951 / 570 963
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-06-18] / []

2025-07-02T00:57:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16013539378 # 692
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-02
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 557 950 / 568 961
* notice: next accum: outdated-unq outdated-all / unq all: 557 950 / 570 963
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-07-01]

2025-07-01T01:04:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15987182888 # 691
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-01
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 557 950 / 567 960
* notice: next accum: outdated-unq outdated-all / unq all: 557 950 / 568 961
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-30]

2025-06-30T01:00:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15961425116 # 690