@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-03T00:57:21Z",
-  "count_outdated" : 951,
-  "uniques_outdated" : 558,
-  "count" : 963,
-  "uniques" : 570,
+  "timestamp" : "2025-07-04T00:57:03Z",
+  "count_outdated" : 952,
+  "uniques_outdated" : 559,
+  "count" : 965,
+  "uniques" : 572,
   "clones" : [
-    {
-      "timestamp": "2025-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-20T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-03T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
