@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 4,
+  "count": 13,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-06-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-20T00:00:00Z",
       "count": 1,
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-03T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
